2002-08-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (focus_grab_buttons):
	only grab necessary buttons on the client window

2002-08-11  olicha  <olivier.chapuis@free.fr>

	* libs/PictureUtils.c (PICTURE_DEBUG_COLORS_ALLOC_FAILURE):
	Removed some debug code

	* fvwm/fvwm.c (main):
	(usage):
	Added -color-limit to fvwm usage

2002-08-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (style_parse_one_style_option):
	(style_parse_focus_policy_style):
	added style options "FP..." to control focus policy
	removed OverrideGrabFocus and AllowGrabFocus styles

	* fvwm/style.c (merge_styles):
	fixed style defaults != 0

	* fvwm/focus.c (__restore_focus_after_unmap):
	fixed a bug w/ reverting the focus from transients to the parent

	* fvwm/ewmh.c (ewmh_HandleDesktop):
	* fvwm/style.c (style_parse_one_style_option):
	fixed defaults for various focus styles

	* NEWS:
	updated for 2.4.9

	* fvwm/frame.c (frame_mrs_resize_move_windows):
	backed out anti-flicker patch that slowed down command processing

	* fvwm/bindings.c (update_nr_buttons):
	(ParseBinding):
	fixed sluggish processing of mouse bindings

	* fvwm/events.c (__handle_bpress_action):
	fixed drawing of pressed decorations w/o bindings

	* fvwm/frame.c (frame_move_resize):
	removed debug code that broke focus handling

	* fvwm/style.c (style_parse_one_style_option):
	fixed passing the focus click to the app by default

	* fvwm/events.c (__handle_click_to_focus):
	* fvwm/focus.c (set_focus_to_fwin):
	(__set_focus_to_fwin):
	removed drawing code that broke as many places as it fixed; plus it
	cause unnecessary redraws

	* fvwm/events.c (HandleConfigureRequest):
	send a synthetical ConfigureNotify if an application is not granted its
	wishes from a ConfigureRequest; this is necessary for FixedPPosition
	and FixedPSize to work properly; also to be ICCCM compliant
	always force border_width 0 in these events
	in the experimental cr merging code, send a number of cn events equal