@@ -1919,20 +1919,20 @@ static Bool style_parse_one_style_option(
 		}
 		else if (StrEquals(token, "ClickToFocusRaisesOff"))
 		{
-			FPS_RAISE_FOCUSED_CLIENT_CLICK(SF_FOCUS_POLICY(*ps), 1);
+			FPS_RAISE_FOCUSED_CLIENT_CLICK(SF_FOCUS_POLICY(*ps), 0);
 			FPS_RAISE_FOCUSED_CLIENT_CLICK(SM_FOCUS_POLICY(*ps), 1);
 			FPS_RAISE_FOCUSED_CLIENT_CLICK(SC_FOCUS_POLICY(*ps), 1);
 			FPS_RAISE_UNFOCUSED_CLIENT_CLICK(
-				SF_FOCUS_POLICY(*ps), 1);
+				SF_FOCUS_POLICY(*ps), 0);
 			FPS_RAISE_UNFOCUSED_CLIENT_CLICK(
 				SM_FOCUS_POLICY(*ps), 1);
 			FPS_RAISE_UNFOCUSED_CLIENT_CLICK(
 				SC_FOCUS_POLICY(*ps), 1);
-			FPS_RAISE_FOCUSED_DECOR_CLICK(SF_FOCUS_POLICY(*ps), 1);
+			FPS_RAISE_FOCUSED_DECOR_CLICK(SF_FOCUS_POLICY(*ps), 0);
 			FPS_RAISE_FOCUSED_DECOR_CLICK(SM_FOCUS_POLICY(*ps), 1);
 			FPS_RAISE_FOCUSED_DECOR_CLICK(SC_FOCUS_POLICY(*ps), 1);
 			FPS_RAISE_UNFOCUSED_DECOR_CLICK(
-				SF_FOCUS_POLICY(*ps), 1);
+				SF_FOCUS_POLICY(*ps), 0);
 			FPS_RAISE_UNFOCUSED_DECOR_CLICK(
 				SM_FOCUS_POLICY(*ps), 1);
 			FPS_RAISE_UNFOCUSED_DECOR_CLICK(
